# rusteyes

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  flake.nix  project.md
.claude/: settings.json
.codex/: hooks.json
.codex/hooks/: rustfmt.sh
build-notes/: active-time-sync.md  authenticated-peer-transport.md  automatic-break-sync.md  backend-actor-runtime.md  backend-trait.md  break-counter-sync.md  break-disable-sync.md  break-finished-beep.md  config-schema.md  core-layout.md  daemon-runtime-noop.md  default-config-file.md  disabled-status-and-reenable.md  idle-activity-grace.md  idle-reset-behavior.md  lan-discovery.md  linux-packaging.md  log-stream-routing.md  logging.md  macos-activity.md  macos-break-diagnostics.md  macos-helper-ipc.md  macos-helper-scaffold.md  macos-input-blocking.md  macos-launchagent.md  macos-lock-after-break.md  macos-locked-break-finish.md  macos-login-item.md  macos-overlay.md  macos-packaging.md  macos-permission-preflight.md  macos-tray-template-icon.md  macos-ui-improvements.md  macos-user-notifications-api.md  manual-break-cadence-reset.md  manual-break-control.md  notification-tray-ui.md  overlay-stuck-recovery.md  peer-config-compatibility.md  pre-break-notification-countdown.md  (+20 more)
helpers/macos-helper/: Package.swift
helpers/macos-helper/Sources/ResteyesMacOSHelper/: main.swift
helpers/macos-helper/Sources/RustEyesMacOSHelper/: main.swift
nix/: home-manager-module.nix  module-common.nix  nixos-module.nix
package/icons/: rusteyes-tray.rgba
package/macos/: Info.plist  RustEyes.icns
src/: activity.rs  backend.rs  config.rs  lib.rs  lock_command.rs  macos_helper.rs  macos_login_item.rs  main.rs  runtime.rs  scheduler.rs  sync_discovery.rs  sync_protocol.rs  sync_transport.rs  sync_transport_io.rs  ui.rs  x11_activity.rs  x11_overlay.rs
src/activity/: tests.rs
src/config/: tests.rs
src/lock_command/: tests.rs
src/runtime/: tests.rs
src/scheduler/: tests.rs
src/sync_discovery/: tests.rs
src/sync_protocol/: tests.rs
src/sync_transport/: commands.rs  connections.rs  session.rs  tests.rs  worker.rs
src/x11_activity/: tests.rs
src/x11_overlay/: tests.rs
test-configs/: forty-second-break.yaml  sync-discovery.yaml  ten-second-break.yaml
