[package]
name = "resteyes"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
humantime = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = { version = "0.0.27", default-features = false, features = ["deserialize"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.2", default-features = false, features = ["randr", "screensaver"] }

[target.'cfg(target_os = "macos")'.dependencies]
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
