[package]
name = "rusteyes"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

[dependencies]
flume = { version = "0.11.1", default-features = false, features = ["select"] }
getrandom = "0.3.4"
hmac = "0.12.1"
humantime = "2.3.0"
message-io = { version = "0.19.0", default-features = false, features = ["tcp"] }
mdns-sd = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = { version = "0.0.27", default-features = false, features = ["deserialize"] }
sha2 = "0.10.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tao = "0.35.3"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.18.0"
tray-icon = { version = "0.24.1", default-features = false, features = ["gtk"] }
x11rb = { version = "0.13.2", default-features = false, features = ["randr", "screensaver"] }

[target.'cfg(target_os = "macos")'.dependencies]
notify-rust = { version = "4.18.0", features = ["preview-macos-un"] }
tray-icon = { version = "0.24.1", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
